# Hub-Assist

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json
backend/: .env.example  CHANGES.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TOTP_2FA_IMPLEMENTATION.md  jest-e2e.config.js  jest-e2e.config.js.map  jest.config.js.map  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
contracts/: Cargo.toml  package.json  tsconfig.json
contracts/access_control/: README.md
contracts/access_control/src/: access_control.rs  lib.rs
contracts/common_types/src/: lib.rs  types.rs
contracts/hubassist_hub/src/: lib.rs
contracts/manage_hub/src/: allowance.rs  attendance_log.rs  lib.rs  staking.rs  test.rs  tier_errors.rs  tier_management.rs
contracts/membership_token/src/: lib.rs
contracts/payment_escrow/src/: errors.rs  lib.rs  types.rs
contracts/scripts/: test-integration.sh
contracts/tests/integration/: membership-token.test.ts  workspace-booking.test.ts
contracts/workspace_booking/src/: lib.rs  test.rs  types.rs
contracts/workspace_booking/test_snapshots/test/: test_confirm_already_confirmed_returns_error.1.json  test_confirm_by_admin_changes_status.1.json  test_confirm_non_existent_booking_returns_booking_not_found.1.json
docs/: attendance-summary.md  audit-events.md  logging.md  outbox-flow.md  soft-delete-cascade.md  webhook-delivery-lifecycle.md
frontend/: .env.example  package-lock.json  package.json
scripts/: smoke-test.sh
(+248 files in other folders)
