[workspace]
members = [
    "hubassist_hub",
    "manage_hub",
    "workspace_booking",
    "access_control",
    "membership_token",
    "payment_escrow",
    "common_types",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }
soroban-sdk-testutils = { version = "21.0.0", package = "soroban-sdk", features = ["testutils"] }
common_types = { path = "common_types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1

[profile.test-coverage]
inherits = "test"

